# chrome_bookmark_cleanup

./: LICENSE  README.md  bookmarks-browser-template.html  implementation_plan.md  pyproject.toml  task.md  walkthrough.md
chrome_bookmark_cleanup/: __init__.py  cleanup.py  main.py  parser.py
tests/: __init__.py  conftest.py  test_cleanup.py  test_cli.py  test_parser.py
