[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chrome-bookmark-cleanup"
version = "0.1.0"
description = "A CLI tool to parse, clean, and format Chrome HTML bookmarks."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
chrome-bookmark-cleanup = "chrome_bookmark_cleanup.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chrome_bookmark_cleanup*"]
